NXT-3196: Add 'HubResourceChangeProvider' to default dependencies and make it callable from the FE
NXT-3196 (Consume space explorer update events in the FE)